--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,6 +1,9 @@
-#root {
-  max-width: 1280px;
+html, body, #root {
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
+  z-index: -99;
+  position: absolute;
 }
